2011-01-16 Alexander Opitz <opi@gmx.at>
* #57 Add cache clearing

2011-01-13 Alexander Opitz <opi@gmx.at>
* #57 Add function to remove explizit a hash

2011-01-05 Alexander Opitz <opi@gmx.at>
* #58 Add Logging output to Cache Backend
* #55 Releasing 0.0.9

2011-01-02 Alexander Opitz <opi@gmx.at>
* #50 Implement Filecache

2010-12-26 Alexander Opitz <opi@gmx.at>
* #54 Complete Cache looking
* #56 Disable autoescaping for Twig 0.9.10
* #50 Refactor for more cache backends

2010-12-24 Alexander Opitz <opi@gmx.at>
* #54 Cache looking
* #51 Implement Exceptions

2010-11-21 Alexander Opitz <opi@gmx.at>
* #42 Implement Caching Framework
* #44 Releasing 0.0.8

2010-07-29 Alexander Opitz <opi@gmx.at>
* DataHandler FW #32
* DataHandler for PEAR::MDB2 #33
* Version number in config #37
* Releasing 0.0.7 #39

2010-05-14 Alexander Opitz <opi@gmx.at>
* Releasing 0.0.6 #28

2010-05-12 Alexander Opitz <opi@gmx.at>
* Add loadView Function for Screens. #35
* Multiple Screens. #30

2010-05-12 Alexander Opitz <opi@gmx.at>
* Move content output out of application #34

2010-04-10 Alexander Opitz <opi@gmx.at>
* Multiple Views per Screen #29

2010-04-10 Alexander Opitz <opi@gmx.at>
* Multiple Views per Screen #29

2010-03-19 Alexander Opitz <opi@gmx.at>
* add Twig Templates #27

2010-03-11 Alexander Opitz <opi@gmx.at>
* Let application and screen instance of view #22
* Extend application interface #26
* Use view in application and screen #25
* Update SimpleFormDemo #24
* Releasing 0.0.5 #23

2010-02-03 Alexander Opitz <opi@gmx.at>
* Reorganize SVN #14
* Startable on Windows #17
* Fix template naming #16
* Screen needs different views #18
* SimpleFormDemo #15
* Releasing 0.0.4 #19

2010-01-02 Alexander Opitz <opi@gmx.at>
* Implement getConfigParameter
* Implement simple getParameter
* Fix false controller constructor
* Releasing 0.0.3

2009-12-14 Alexander Opitz <opi@gmx.at>
* Add Twig Templater

2009-12-07 Alexander Opitz <opi@gmx.at>
* Add templatizing
* Releasing 0.0.2
