@@ -1,5 +1,6 @@
 2011-01-16 Alexander Opitz <opi@gmx.at>
 * #57 Add cache clearing
+* #61 DataLoader/MDB2 Cleanup and use Exception
 
 2011-01-13 Alexander Opitz <opi@gmx.at>
 * #57 Add function to remove explizit a hash
